[package]
name = "async_rat_decoder_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
flate2 = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
hex = "0.4.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
anyhow = "1.0.98"
# openssl = { version = "0.10", features = ["vendored"] }
tokio-openssl = "0.6"